# riscy

./: Cargo.toml  README.md
src/: core.rs  instruction.rs  load.rs  main.rs
