[package]
name = "riscy"
version = "0.1.0"
edition = "2021"
description = "RISC-V Emulator"
license = "MIT"
repository = "https://github.com/john-h-k/riscy"
authors = ["John Harry Kelly <johnharrykelly@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
elf = "0.7.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
